force-app/main/default/objects/Contact/fields/Approved_for_use__c.field-meta.xml
<CustomField>
    <fullName>Approved_for_use__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved for use</label>
    <type>Checkbox</type>
</CustomField>