force-app/main/default/objects/Contact/fields/Proof_id__c.field-meta.xml
<CustomField>
    <fullName>Proof_id__c</fullName>
    <label>Proof Id number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>