force-app/main/default/objects/Contact/fields/Proof_id_type__c.field-meta.xml
<CustomField>
    <fullName>Proof_id_type__c</fullName>
    <label>Proof id type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aadhar Number</fullName>
            </value>
            <value>
                <fullName>Pan Number</fullName>
            </value>
            <value>
                <fullName>License Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>