force-app/main/default/objects/Contact/validationRules/Contact_must_be_in_Account_ZIP_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_must_be_in_Account_ZIP_Code</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT(ISBLANK(AccountId)),
 MailingPostalCode  &lt;&gt;  Account.ShippingPostalCode )</errorConditionFormula>
    <errorMessage>Contact is not in Account zip code</errorMessage>
</ValidationRule>